--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.5",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.5",
     "react-modal": "^3.8.1",
     "react-router-dom": "^5.0.0",
