--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.5",
     "react-modal": "^3.8.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
