--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.8.5",
     "react-modal": "^3.8.1",
     "react-redux": "^7.1.3",
+    "react-router": "^3.2.5",
     "react-router-dom": "^5.0.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.8",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
