--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.5",
     "react-dropzone": "^10.2.1",
+    "react-images-upload": "^1.2.7",
     "react-modal": "^3.8.1",
     "react-redux": "^7.1.3",
     "react-router": "^3.2.5",
