--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.8",
+    "react-slide-toggle": "^0.3.3",
+    "react-ui-cards": "^2.0.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.1"
