--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
+    "material-ui": "^0.20.2",
     "mdbreact": "^4.23.0",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -21,7 +23,9 @@
     "react-ui-cards": "^2.0.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "validator": "^12.2.0",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
