--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "material-ui": "^0.20.2",
@@ -28,6 +29,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.1",
+    "styled-components": "^5.3.6",
     "validator": "^12.2.0",
     "zxcvbn": "^4.4.2"
   },
